syntax = "proto3";

package raft;

service RaftService {
  rpc ProcessRaftMessage(RaftMessage) returns (RaftResponse);
  rpc ProcessHeartbeat(Heartbeat) returns (Ack);
  rpc ProcessRequestVote(RequestVote) returns (RequestVoteResponse);
}

// The request message containing the data
message RaftMessage {
  string data = 1;
}

// The response message containing the results
message RaftResponse {
  string result = 1;
}

// The Heartbeat message to be sent by the leader
message Heartbeat {
  uint64 term = 1;
  string leader_id = 2;
}

// The Ack response message to be sent by followers
message Ack {
  uint64 term = 1;
  bool success = 2;
}

message RequestVote {
  uint64 term = 1;
  string candidate_id = 2;
}

message RequestVoteResponse {
  uint64 term = 1;
  bool vote_granted = 2;
}
